<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@drawable/bg_things"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/logo"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/logo"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/logo">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="40sp"
            android:textColor="@color/black"
            android:fontFamily="@font/gold_play"
            android:layout_gravity="center"
            android:text="@string/app_name"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginTop="60dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:fontFamily="@font/instrument_bold_med"
            android:layout_gravity="center"
            android:text="@string/login"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/textBox_height"
            android:background="@drawable/bg_text_box"
            android:hint="@string/enter_your_email"
            android:textSize="@dimen/text_normal"
            android:paddingHorizontal="15dp"
            android:layout_marginTop="30dp"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="15dp"
            android:inputType="textEmailAddress"
            android:imeOptions="actionNext"
            android:id="@+id/emailBox"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/textBox_height"
            android:background="@drawable/bg_text_box"
            android:hint="@string/password"
            android:paddingHorizontal="15dp"
            android:textSize="@dimen/text_normal"
            android:layout_marginTop="10dp"
            android:inputType="textPassword"
            android:imeOptions="actionDone"
            android:drawableStart="@drawable/ic_lock"
            android:drawablePadding="15dp"
            android:id="@+id/passwordBox"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_pass"
            android:layout_gravity="end"
            android:textSize="@dimen/text_normal"
            android:textColor="@color/textBlue"
            android:layout_marginTop="10dp"/>



        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="150dp"
            android:layout_height="@dimen/button_height"
            android:text="@string/login"
            android:textSize="@dimen/text_normal"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:id="@+id/loginBtn"
            android:layout_gravity="center"
            android:foreground="?android:attr/selectableItemBackground"
            android:background="@drawable/bg_green"
            android:layout_marginTop="50dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="¿No tienes cuenta? Crear cuenta"
            android:textSize="@dimen/text_normal"
            android:textColor="@color/textBlue"
            android:id="@+id/signupBtn"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"/>
    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>